--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,7 +1,7 @@
-# Settings to manage and configure a Firebase App Hosting backend.
-# https://firebase.google.com/docs/app-hosting/configure
-
+framework: nextjs
+build:
+  command: npm run build
+run:
+  command: npm start
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
   maxInstances: 1
