--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -35,11 +35,10 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
-      - name: Copy 404 page
-        run: cp .next/404.html .next/static/404.html
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BHAVANI_DIGITALS }}
           channelId: live
           projectId: bhavani-digitals
+          entryPoint: out
