--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -35,10 +35,13 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Copy additional files
+        run: |
+          cp firebase.json out/
+          cp .firebaserc out/
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BHAVANI_DIGITALS }}
           channelId: live
           projectId: bhavani-digitals
-          entryPoint: out
