--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.16",
+    "@ai-sdk/react": "^3.0.62",
     "@dataconnect/generated": "file:src/dataconnect-generated",
     "@firebase/auth": "^1.11.0",
     "@firebase/firestore": "^4.9.1",
@@ -41,7 +43,10 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/nodemailer": "^7.0.1",
+    "@vis.gl/react-google-maps": "^1.7.1",
+    "ai": "^6.0.60",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -50,13 +55,16 @@
     "encoding": "^0.1.13",
     "firebase-admin": "^13.5.0",
     "lucide-react": "^0.475.0",
+    "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.1",
-    "tailwind-merge": "^3.0.1",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -70,7 +78,7 @@
     "@types/react-dom": "^18.3.7",
     "@types/serve-static": "^1.15.8",
     "firebase": "^12.2.1",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.29.2",
     "next": "^15.5.2",
     "postcss": "^8",
     "react-hook-form": "^7.62.0",
